--- a/css/styles.css
+++ b/css/styles.css
@@ -114,6 +114,211 @@ body {
   background-size: cover;
 }
 
+.form {
+  width: 528px;
+  height: 581px;
+  background-color: #ffffff;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 4px;
+
+  margin-left: auto;
+  margin-right: auto;
+  padding: 40px 41px 40px 41px;
+}
+
+.form-field {
+  position: relative;
+}
+
+.form-label {
+  position: absolute;
+  top: 12px;
+  left: 42px;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+  letter-spacing: 0.03em;
+
+  color: #212121;
+
+  margin-bottom: 30px;
+}
+
+.form-input {
+  outline: none;
+  cursor: pointer;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 28px;
+  padding-left: 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:focus {
+  border-color: #2196f3;
+}
+
+.form-input:focus ~ .form-svg {
+  fill: #2196f3;
+}
+
+.form-input:focus + .form-label {
+  color: #2196f3;
+  left: 10px;
+  transform: translateY(-190%);
+}
+
+.form-input:focus + .form-label,
+.form-input:not(:placeholder-shown) + .form-label {
+  transform: translateY(-190%);
+  left: 10px;
+}
+
+.form-textarea {
+  outline: none;
+  width: 100%;
+  min-height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  margin-bottom: 20px;
+  resize: none;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-textarea:focus {
+  border-color: #2196f3;
+}
+
+.form-svg {
+  position: absolute;
+  top: 11px;
+  left: 16px;
+}
+
+.checkbox-link {
+  color: #2196f3;
+  text-decoration: underline;
+}
+.checkbox-text {
+  color: #757575;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.form-checkbox {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+
+  position: absolute;
+}
+
+.form-checkbox:checked + .checkbox-icon {
+  background-color: #2196f3;
+  border-color: #2196f3;
+  background-image: url(../img/check.svg);
+  background-origin: border-box;
+  background-size: contain;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-label {
+  display: flex;
+  align-items: center;
+}
+
+.checkbox-icon {
+  display: inline-block;
+  width: 16px;
+  height: 15px;
+  border: 2px solid #212121;
+  border-radius: 3px;
+
+  margin-right: 8px;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-icon:hover {
+  border-color: #2196f3;
+}
+
+.button-modal {
+  width: 200px;
+  height: 50px;
+  border: none;
+  cursor: pointer;
+
+  margin-top: 30px;
+
+  font-family: 'Roboto';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+
+  color: #ffffff;
+  background: #188ce8;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+}
+
+.form .close {
+  outline: none;
+  line-height: 0;
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(-8px, 8px);
+  transform: translate(-8px, 8px);
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  padding: 6px;
+  border: none;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: #ffffff;
+}
+
+.close-svg {
+  background-size: contain;
+  width: 11px;
+  height: 11px;
+
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  /* padding: calc((100% - 11px) / 2); */
+}
+
+.close:hover,
+.close:focus {
+  cursor: pointer;
+  fill: #188ce8;
+}
+
 .link {
   color: var(--title-text-color);
   font-weight: 500;
@@ -245,12 +450,17 @@ body {
 }
 
 .backdrop {
-  position: absolute;
+  position: fixed;
   top: 0;
-  bottom: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(15, 14, 12, 0.5);
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 93px;
+  padding-bottom: 93px;
+  background-color: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
 }
 
 .modal {
@@ -260,7 +470,9 @@ body {
   transform: translate(-50%, -50%);
   min-width: 300px;
   min-height: 200px;
-  background-color: #fff;
+  background-color: #ffffff;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
 }
 
 .backdrop.is-hidden {
@@ -296,31 +508,6 @@ body {
   margin-left: 30px;
 }
 
-/* .items::before {
-  display: block;
-  height: 120px;
-  content: '';
-  background-color: #f5f4fa;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-} */
-
-/* .plate-icon::before {
-  background-image: url(../img/plate.svg);
-}
-
-.clock-icon::before {
-  background-image: url(../img/clock.svg);
-}
-
-.computer-icon::before {
-  background-image: url(../img/computer.svg);
-}
-
-.astronaut-icon::before {
-  background-image: url(../img/astronaut.svg);
-} */
-
 .section-title {
   color: var(--title-text-color);
   font-weight: 700;
@@ -333,6 +520,14 @@ body {
 }
 
 .section-text {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: #757575;
+
   margin-top: 10px;
   margin-bottom: 0;
 }
@@ -360,6 +555,7 @@ body {
   line-height: 1.16;
   letter-spacing: 0.03em;
   text-align: center;
+
   padding-bottom: 94px;
 }
 
@@ -602,11 +798,53 @@ h3 {
 }
 
 b {
+  display: block;
   color: var(--primary-bg-color);
+
+  margin-bottom: 20px;
+
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
+}
+
+.footer-imput {
+  display: block;
+  color: var(--primary-bg-color);
+
+  margin-bottom: 20px;
+
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+}
+
+.telegram-icon {
+  vertical-align: middle;
+
+  margin-left: 10px;
+}
+
+.forma {
+  width: 358px;
+  height: 50px;
+
+  margin-right: 12px;
+
+  color: rgba(255, 255, 255, 0.9);
+  background-color: #2f303a;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+
+  padding: 15px 16px 15px 16px;
+
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
 }
 
 .footer-studio {
